src/objects/Questionnaire_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <description>Two letters ONLY</description>
        <label>Country</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BY</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EG</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>KW</fullName>
                </value>
                <value>
                    <fullName>KZ</fullName>
                </value>
                <value>
                    <fullName>LU</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>UA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Opportunity__c</fullName>
        <inlineHelpText>Would you like to create an opportunity automatically after submitting questionnaire?</inlineHelpText>
        <label>Create Opportunity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not</fullName>
                    <label>Do Not Create</label>
                </value>
                <value>
                    <fullName>Sirona Opportunity</fullName>
                </value>
                <value>
                    <fullName>IMPL GET Opp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>In case the system couldn&apos;t assign the opportunity owner through ETM, to whom should be assigned?</inlineHelpText>
        <label>Default User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Questionnaires_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_manager_email_at_assignament__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this is tick and the opportunity assignment is manual email to manager when opp is assigned is not sent</inlineHelpText>
        <label>No manager email at assignament</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Of_Opportunity__c</fullName>
        <label>Owner Of Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Create_Opportunity__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Based on Dealer ETM</fullName>
                </value>
                <value>
                    <fullName>Based on Account ETM</fullName>
                </value>
                <value>
                    <fullName>Default User</fullName>
                </value>
                <value>
                    <fullName>Based on Manual assignment ETM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Assignment__c</fullName>
        <inlineHelpText>Assign Partners to the Opportunity based on Preferred Dealer</inlineHelpText>
        <label>Partner Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Create_Opportunity__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <inlineHelpText>The list of Product lines that will be displayed at the beginning of the questionnaire. Make sure to create questions for each product line.</inlineHelpText>
        <label>Product Line</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Questionnaire_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Line</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questionnaire_Type__c</fullName>
        <label>Questionnaire Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Questionnaire_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_contact_option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show contact option?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_manual_assignment_of_owner_option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show manual assignment of owner option?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Questionnaire Setup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Questionnaire_Type__c</columns>
        <columns>Create_Opportunity__c</columns>
        <columns>Default_User__c</columns>
        <columns>Owner_Of_Opportunity__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires Setup</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cant_Combine_Poduct_line_and_Sublines</fullName>
        <active>true</active>
        <errorConditionFormula>(Includes(Product_Line__c,&quot;CAD/CAM&quot; ) &amp;&amp; (
Includes(Product_Line__c,&quot;CAD/CAM - CEREC&quot; ) ||
Includes(Product_Line__c,&quot;CAD/CAM - InLab&quot; ))) ||
(Includes(Product_Line__c,&quot;Imaging&quot; )&amp;&amp; (
Includes(Product_Line__c,&quot;Imaging - Extra Oral&quot; ) ||
Includes(Product_Line__c,&quot;Imaging - Intra Oral&quot; )))</errorConditionFormula>
        <errorDisplayField>Product_Line__c</errorDisplayField>
        <errorMessage>You can&apos;t use the main product line and its sub-line</errorMessage>
    </validationRules>
</CustomObject>